--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
+
+@layer base{
+    html{
+        font-family: "Nunito", ui-sans-serif, system-ui
+    }
+}
+
+@font-face {
+    font-family: "CressidaSwashC";
+    src: url("./assets/fonts/CressidaSwashC.ttf")
+}
