--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,11 @@
     font-family: "CressidaSwashC";
     src: url("./assets/fonts/CressidaSwashC.ttf")
 }
+
+.material-symbols-outlined {
+     font-variation-settings:
+             'FILL' 0,
+             'wght' 200,
+             'GRAD' 0,
+             'opsz' 48
+}
