Исправлен баг с неполной шириной страниц. Начал добавлять поля ввода в страницу добавления фильма

--- a/src/views/Staff/Administrator/AddFilm/AddFilm.css
+++ b/src/views/Staff/Administrator/AddFilm/AddFilm.css
@@ -46,3 +46,13 @@ input[type='file'] {
     padding: 6px 12px;
     cursor: pointer;
 }
+
+.multi-input {
+    width : '100%';
+    border-radius : '0.5rem';
+    border-color : '#d1d5db';
+}
+
+.multi-input:focus {
+    border-color : '#d1d5db';
+}
